# silicon

./: .gitignore  .gitmodules  CMakeLists.txt  FindRE2C.cmake  README.md
.github/workflows/: build.yml  release.yml
examples/: fibonacci.si  simple.si
include/silicon/CodeGen/: CGBinaryOperation.h  CGBooleanLiteral.h  CGBreak.h  CGCodeBlock.h  CGContinue.h  CGFor.h  CGFunction.h  CGFunctionCall.h  CGIf.h  CGInterface.h  CGLoop.h  CGNode.h  CGNumberLiteral.h  CGPlainObject.h  CGPrototype.h  CGReturn.h  CGString.h  CGType.h  CGUnaryOperation.h  CGVariable.h  CGVariableDefinition.h  CGWhile.h  Context.h  codegen.h
src/: config.h.in  main.cpp  utils.cpp  utils.h
src/CodeGen/: CGBinaryOperation.cpp  CGBooleanLiteral.cpp  CGBreak.cpp  CGCodeBlock.cpp  CGContinue.cpp  CGFor.cpp  CGFunction.cpp  CGFunctionCall.cpp  CGIf.cpp  CGInterface.cpp  CGLoop.cpp  CGNode.cpp  CGNumberLiteral.cpp  CGPlainObject.cpp  CGPrototype.cpp  CGReturn.cpp  CGString.cpp  CGType.cpp  CGUnaryOperation.cpp  CGVariable.cpp  CGVariableDefinition.cpp  CGWhile.cpp  Context.cpp  codegen.cpp
src/ast/: BinaryOperation.cpp  BinaryOperation.h  Block.cpp  Block.h  BooleanLiteral.cpp  BooleanLiteral.h  Break.cpp  Break.h  Cast.cpp  Cast.h  Continue.cpp  Continue.h  For.cpp  For.h  Function.cpp  Function.h  FunctionCall.cpp  FunctionCall.h  If.cpp  If.h  Interface.cpp  Interface.h  Loop.cpp  Loop.h  Node.cpp  Node.h  Null.cpp  Null.h  NumberLiteral.cpp  NumberLiteral.h  PlainObject.cpp  PlainObject.h  Prototype.cpp  Prototype.h  Return.cpp  Return.h  StringLiteral.cpp  StringLiteral.h  Type.cpp  Type.h  (+8 more)
src/compiler/: Context.cpp  Context.h  codegen.cpp  codegen.h
src/parser/: parser.y
